# hermes-multi-agent-team

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: ci.yml
examples/baogoet-team/: README.md  team.json
hermes_multi_agent_team/: __init__.py  cli.py
hermes_multi_agent_team/commands/: __init__.py  collect_ids.py  configure.py  destroy.py  doctor.py  init.py  start.py  status.py  verify.py
hermes_multi_agent_team/templates/: config.yaml.j2  env.j2
hermes_multi_agent_team/templates/SOUL/: backend.md.j2  coordinator.md.j2  designer.md.j2  frontend.md.j2  pm.md.j2  qa.md.j2
hermes_multi_agent_team/utils/: __init__.py  gateway.py  open_id.py  profile.py
tests/: conftest.py  test_cli.py  test_configure.py  test_destroy.py  test_doctor.py  test_init.py  test_status.py  test_verify.py
