[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-multi-agent-team"
version = "0.1.0"
description = "Automate multi-agent team setup for Hermes Agent + Feishu"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
hermes-team = "hermes_multi_agent_team.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_multi_agent_team*"]

[tool.setuptools.package-data]
hermes_multi_agent_team = ["templates/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
